--- a/src/logic/Propositional.ipynb
+++ b/src/logic/Propositional.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -123,7 +123,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO"
+    "## TODO\n",
+    "kb = createResolutionKB()\n",
+    "\n",
+    "socrates, platao = Atom('socrates'), Atom('platao')\n",
+    "kb.tell(Implies())"
    ]
   },
   {
@@ -275,7 +279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -289,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
