feat: não fiz muita coisa :(

--- a/src/logic/Propositional.ipynb
+++ b/src/logic/Propositional.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -119,15 +119,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== Knowledge base [5 derivations] ===\n",
+      "('*', Or(Not(Platão visitar Sócrates),Sócrates visitar Platão))\n",
+      "('*', Or(Not(Platão visitar Sócrates),Not(Sócrates visitar Platão)))\n",
+      "('-', Not(Platão visitar Sócrates))\n",
+      "('*', Or(Platão visitar Sócrates,Sócrates visitar Platão))\n",
+      "('-', Sócrates visitar Platão)\n"
+     ]
+    }
+   ],
    "source": [
     "## TODO\n",
     "kb = createResolutionKB()\n",
     "\n",
-    "socrates, platao = Atom('socrates'), Atom('platao')\n",
-    "kb.tell(Implies())"
+    "socrates, platao = Atom('Sócrates visitar Platão'), Atom('Platão visitar Sócrates')\n",
+    "\n",
+    "kb.tell(Implies(platao, socrates))\n",
+    "kb.tell(Implies(socrates, Not(platao)))\n",
+    "kb.tell(Implies(Not(socrates), platao))\n",
+    "\n",
+    "kb.dump()"
    ]
   },
   {
@@ -143,11 +161,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== Knowledge base [6 derivations] ===\n",
+      "('*', Or(Beltrana está falando a verdade,Pelo menos uma de nós é mentirosa))\n",
+      "('*', Or(Fulana está falando a verdade,Pelo menos uma de nós é mentirosa))\n",
+      "('*', Or(Or(Not(Beltrana está falando a verdade),Not(Fulana está falando a verdade)),Not(Pelo menos uma de nós é mentirosa)))\n",
+      "('*', Beltrana está falando a verdade)\n",
+      "('-', Or(Not(Fulana está falando a verdade),Not(Pelo menos uma de nós é mentirosa)))\n",
+      "('-', Or(Beltrana está falando a verdade,Not(Fulana está falando a verdade)))\n"
+     ]
+    }
+   ],
    "source": [
-    "## TODO"
+    "## TODO\n",
+    "\n",
+    "kb = createResolutionKB()\n",
+    "\n",
+    "frase    = Atom(\"Pelo menos uma de nós é mentirosa\")\n",
+    "beltrana = Atom(\"Beltrana está falando a verdade\")\n",
+    "fulana   = Atom(\"Fulana está falando a verdade\")\n",
+    "\n",
+    "kb.tell(Implies(Not(frase), beltrana))\n",
+    "kb.tell(Implies(Not(frase), fulana))\n",
+    "kb.tell(Implies(frase, Or(Not(beltrana), Not(fulana))))\n",
+    "kb.tell(beltrana)\n",
+    "\n",
+    "kb.dump()"
    ]
   },
   {
