--- a/src/logic/FirstOrder.ipynb
+++ b/src/logic/FirstOrder.ipynb
@@ -194,21 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "Forall: wanted <class 'logic.Formula'>, but got $y",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [16]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m kb \u001b[38;5;241m=\u001b[39m createResolutionKB()\n\u001b[1;32m      4\u001b[0m estudante, curso \u001b[38;5;241m=\u001b[39m Atom(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEstudante\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m$x\u001b[39m\u001b[38;5;124m'\u001b[39m), Atom(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCurso\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m$y\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m tmp1 \u001b[38;5;241m=\u001b[39m Exists(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m$y\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mForall\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m$x\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m$y\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m) \n\u001b[1;32m      6\u001b[0m kb\u001b[38;5;241m.\u001b[39mtell(Implies(tmp1, Atom(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCursou\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m$x\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m$y\u001b[39m\u001b[38;5;124m'\u001b[39m)))\n\u001b[1;32m      8\u001b[0m kb\u001b[38;5;241m.\u001b[39mtell(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEstudante\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/HDSeguro/code/Facul/Inteligencia-Artificial/src/logic/logic.py:126\u001b[0m, in \u001b[0;36mForall.__init__\u001b[0;34m(self, var, body)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, var, body):\n\u001b[1;32m    125\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvar \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mensureType(toExpr(var), Variable)\n\u001b[0;32m--> 126\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbody \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mensureFormula\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbody\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    127\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstrRepn \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "File \u001b[0;32m~/HDSeguro/code/Facul/Inteligencia-Artificial/src/logic/logic.py:24\u001b[0m, in \u001b[0;36mExpression.ensureFormula\u001b[0;34m(self, arg)\u001b[0m\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mensureFormula\u001b[39m(\u001b[38;5;28mself\u001b[39m, arg): \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mensureType\u001b[49m\u001b[43m(\u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mFormula\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/HDSeguro/code/Facul/Inteligencia-Artificial/src/logic/logic.py:22\u001b[0m, in \u001b[0;36mExpression.ensureType\u001b[0;34m(self, arg, wantedType)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mensureType\u001b[39m(\u001b[38;5;28mself\u001b[39m, arg, wantedType):\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(arg, wantedType):\n\u001b[0;32m---> 22\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m: wanted \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m, but got \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, wantedType, arg))\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m arg\n",
-      "\u001b[0;31mException\u001b[0m: Forall: wanted <class 'logic.Formula'>, but got $y"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Implies(And(Exists($y,Curso($y)),Forall($x,Estudante($x))),Cursou($x,$y))\n",
+      "==== Knowledge base [0 derivations] ===\n"
      ]
     }
    ],
@@ -216,12 +212,13 @@
     "#### TODO\n",
     "kb = createResolutionKB()\n",
     "\n",
-    "estudante, curso = Atom('Estudante', '$x'), Atom('Curso', '$y')\n",
-    "tmp1 = And('Estudante', 'Curso')\n",
-    "tmp2 = Exists('$y', Forall('$x', '$y')) \n",
-    "kb.tell(Implies(tmp1, Atom('Cursou', '$x', '$y')))\n",
+    "curso     = Exists('$y', Atom('Curso', '$y'))\n",
+    "estudante = Forall('$x', Atom('Estudante', '$x'))\n",
+    "tmp2      = Implies(And(curso, estudante), Atom('Cursou', '$x', '$y'))\n",
     "\n",
-    "kb.tell('Estudante')\n",
+    "print(tmp2)\n",
+    "\n",
+    "#kb.tell(tmp2)\n",
     "kb.dump()"
    ]
   },
