feat: First order update do rada

--- a/src/logic/FirstOrder.ipynb
+++ b/src/logic/FirstOrder.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
@@ -203,23 +203,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Implies(And(Exists($y,Curso($y)),Forall($x,Estudante($x))),Cursou($x,$y))\n",
-      "==== Knowledge base [0 derivations] ===\n"
+      "==== Knowledge base [5 derivations] ===\n",
+      "('*', Curso(skolem$y3))\n",
+      "('*', Or(Cursou($x3,skolem$y3),Not(Estudante($x3))))\n",
+      "('*', Curso(cdc))\n",
+      "('*', Estudante(rafael))\n",
+      "('-', Cursou(rafael,skolem$y3))\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "I don't know."
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#### TODO\n",
     "kb = createResolutionKB()\n",
     "\n",
-    "curso     = Exists('$y', Atom('Curso', '$y'))\n",
-    "estudante = Forall('$x', Atom('Estudante', '$x'))\n",
-    "tmp2      = Implies(And(curso, estudante), Atom('Cursou', '$x', '$y'))\n",
+    "tmp1 = Forall('$x', Implies(Atom('Estudante', '$x'), Atom('Cursou', '$x', '$y')))\n",
+    "tmp2 = Exists('$y', And(Atom('Curso', '$y'), tmp1))\n",
     "\n",
-    "print(tmp2)\n",
+    "kb.tell(tmp2)\n",
     "\n",
-    "#kb.tell(tmp2)\n",
-    "kb.dump()"
+    "# ^^^ CERTO\n",
+    "\n",
+    "kb.tell(Atom('Curso', 'cdc'))\n",
+    "kb.tell(Atom('Estudante', 'rafael'))\n",
+    "\n",
+    "kb.dump()\n",
+    "\n",
+    "kb.ask(Atom('Cursou', 'rafael', 'cdc'))"
    ]
   },
   {
@@ -235,11 +254,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Yes."
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#### TODO"
+    "#### TODO\n",
+    "\n",
+    "# Forall x Pessoa(x) -> Conhece(Maria, x)\n",
+    "\n",
+    "kb = createResolutionKB()\n",
+    "\n",
+    "expressao = Forall('$x', Implies(Atom('Pessoa', '$x'), Atom('Conhece', 'maria', '$x')))\n",
+    "kb.tell(expressao)\n",
+    "\n",
+    "kb.tell(Atom('Pessoa', 'rafael'))\n",
+    "kb.ask(Atom('Conhece', 'maria', 'rafael') )"
    ]
   },
   {
