--- a/src/logic/FirstOrder.ipynb
+++ b/src/logic/FirstOrder.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -217,7 +217,7 @@
        "I don't know."
       ]
      },
-     "execution_count": 57,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,8 +230,6 @@
     "tmp2 = Exists('$y', And(Atom('Curso', '$y'), tmp1))\n",
     "\n",
     "kb.tell(tmp2)\n",
-    "\n",
-    "# ^^^ CERTO\n",
     "\n",
     "kb.tell(Atom('Curso', 'cdc'))\n",
     "kb.tell(Atom('Estudante', 'rafael'))\n",
@@ -271,7 +269,7 @@
    "source": [
     "#### TODO\n",
     "\n",
-    "# Forall x Pessoa(x) -> Conhece(Maria, x)\n",
+    "# Forallx Pessoa(x) -> Conhece(Maria, x)\n",
     "\n",
     "kb = createResolutionKB()\n",
     "\n",
@@ -297,12 +295,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Yes."
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#### TODO\n",
+    "\n",
+    "# Forallx (Pessoa(x) and Origem(x, y)) -> (Idioma(x, pt) Idioma(y, pt))\n",
+    "\n",
+    "# Alguma coisa -> Implies(Idioma(y, idioma_de_x)) \n",
+    "\n",
+    "kb = createResolutionKB()\n",
+    "\n",
+    "and_ = And(Atom('Pessoa', '$x'), Atom('Origem', '$x', 'br'))\n",
+    "exp = Forall('$x', Implies(and_, Atom('Idioma', '$x', 'pt')))\n",
+    "\n",
+    "kb.tell(exp)\n",
+    "\n",
+    "kb.tell(Atom('Origem', 'rafael', 'br'))\n",
+    "kb.tell(Atom('Idioma', 'rafael', 'pt'))\n",
+    "kb.tell(Atom('Origem', 'esquilo', 'br'))\n",
+    "\n",
+    "kb.ask(Atom('Idioma', 'rafael', 'pt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#### TODO"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
