feat: lista de lógica não finalizada

--- a/src/logic/FirstOrder.ipynb
+++ b/src/logic/FirstOrder.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "I learned something."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -194,49 +194,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "==== Knowledge base [5 derivations] ===\n",
-      "('*', Curso(skolem$y3))\n",
-      "('*', Or(Cursou($x3,skolem$y3),Not(Estudante($x3))))\n",
-      "('*', Curso(cdc))\n",
-      "('*', Estudante(rafael))\n",
-      "('-', Cursou(rafael,skolem$y3))\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "I don't know."
       ]
      },
-     "execution_count": 59,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#### TODO\n",
+    "\n",
     "kb = createResolutionKB()\n",
     "\n",
-    "tmp1 = Forall('$x', Implies(Atom('Estudante', '$x'), Atom('Cursou', '$x', '$y')))\n",
-    "tmp2 = Exists('$y', And(Atom('Curso', '$y'), tmp1))\n",
+    "expressao = Exists('$y', And(Atom('Curso', '$y'), Forall('$x', Implies(Atom('Estudante', '$x'), Atom('Cursou', '$x', '$y')))))\n",
     "\n",
-    "kb.tell(tmp2)\n",
+    "kb.tell(expressao)\n",
     "\n",
-    "kb.tell(Atom('Curso', 'cdc'))\n",
-    "kb.tell(Atom('Estudante', 'rafael'))\n",
+    "kb.tell(Atom('Curso', 'direito'))\n",
+    "kb.tell(Atom('Estudante', 'juliana'))\n",
     "\n",
-    "kb.dump()\n",
-    "\n",
-    "kb.ask(Atom('Cursou', 'rafael', 'cdc'))"
+    "kb.ask(Atom('Cursou', 'juliana', 'direito'))"
    ]
   },
   {
@@ -252,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +247,7 @@
        "Yes."
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,15 +255,12 @@
    "source": [
     "#### TODO\n",
     "\n",
-    "# Forallx Pessoa(x) -> Conhece(Maria, x)\n",
-    "\n",
     "kb = createResolutionKB()\n",
     "\n",
-    "expressao = Forall('$x', Implies(Atom('Pessoa', '$x'), Atom('Conhece', 'maria', '$x')))\n",
-    "kb.tell(expressao)\n",
+    "kb.tell(Forall('$x', Implies(Atom('Pessoa', '$x'), Atom('Conhece', 'maria', '$x'))))\n",
     "\n",
-    "kb.tell(Atom('Pessoa', 'rafael'))\n",
-    "kb.ask(Atom('Conhece', 'maria', 'rafael') )"
+    "kb.tell(Atom('Pessoa', 'lucas'))\n",
+    "kb.ask(Atom('Conhece', 'maria', 'lucas') )"
    ]
   },
   {
@@ -295,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +287,7 @@
        "Yes."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,30 +295,18 @@
    "source": [
     "#### TODO\n",
     "\n",
-    "# Forallx (Pessoa(x) and Origem(x, y)) -> (Idioma(x, pt) Idioma(y, pt))\n",
-    "\n",
-    "# Alguma coisa -> Implies(Idioma(y, idioma_de_x)) \n",
-    "\n",
     "kb = createResolutionKB()\n",
     "\n",
-    "and_ = And(Atom('Pessoa', '$x'), Atom('Origem', '$x', 'br'))\n",
-    "exp = Forall('$x', Implies(and_, Atom('Idioma', '$x', 'pt')))\n",
+    "tmp1 = And(Atom('Pessoa', '$x'), Atom('Origem', '$x', '$y'))\n",
+    "tmp2 = Forall('$x', Implies(tmp1, Atom('Idioma', '$x', 'português')))\n",
+    "kb.tell(tmp2)\n",
     "\n",
-    "kb.tell(exp)\n",
+    "kb.tell(Atom('Origem', 'lucas', 'brasil'))\n",
+    "kb.tell(Atom('Idioma', 'joana', 'russia'))\n",
+    "kb.tell(Atom('Origem', 'joana', 'brasil'))\n",
     "\n",
-    "kb.tell(Atom('Origem', 'rafael', 'br'))\n",
-    "kb.tell(Atom('Idioma', 'rafael', 'pt'))\n",
-    "kb.tell(Atom('Origem', 'esquilo', 'br'))\n",
-    "\n",
-    "kb.ask(Atom('Idioma', 'rafael', 'pt'))"
+    "kb.ask(Atom('Idioma', 'joana', 'russia'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -361,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
