feat: artigo terminado

--- a/artigo_series_temporais/article/main.tex
+++ b/artigo_series_temporais/article/main.tex
@@ -6,6 +6,8 @@
 \usepackage{indentfirst}
 \usepackage{geometry}
 \usepackage{bookmark}
+\usepackage{graphicx}
+\usepackage{float}
 
 \title{Séries Temporais: Um Estudo Sobre A Predição de Medidores de Desenvolvimento Brasileiros}
 \author{Lucas Santiago de Oliveira\inst{1}, Rafael Amauri Diniz Augusto\inst{1}, Thiago Henriques Nogueira\inst{1}}
@@ -19,6 +21,7 @@
   \maketitle
 
   \import{sections}{abstract.tex}
+  \import{sections}{introducao.tex}
   \import{sections}{trabalhos correlatos.tex}
   \import{sections}{metodologia.tex}
   \import{sections}{experimentos.tex}
