--- a/artigo_series_temporais/article/sections/discussao.tex
+++ b/artigo_series_temporais/article/sections/discussao.tex
@@ -1,1 +1,21 @@
 \section{Discussão}
+
+É relevante notar como as previsões para todos os indicadores apresentaram um resultado de 
+variância dentro do que foi definido como objetivo pelo grupo. Como exemplo, na figura 5 
+pode ser vista a previsão para o indicador 3 $($SP.URB.TOTL.IN.ZS$)$, que se mostrou muito bom 
+para ser previsto com séries temporais, pois, mesmo tendo um ponto de amenização que diminui 
+a taxa de crescimento, essa amenização acontece na década de 1990, o que ainda está dentro 
+do período de treinamento, ou seja, o modelo consegue se alterar para levar essa mudança em 
+conta na hora de prever valores futuros para esse indicador. A performance do modelo neste 
+indicador também foi considerada extremamente satisfatória para o grupo. Os bons resultados 
+vistos para este indicador também podem ser vistos no indicador 2, que também apresenta uma 
+amenização na mesma época, o que faz sentido, visto que os indicadores 2 e 3 representam dois 
+opostos: A população que vive em centros urbanos e a população que vive em zonas rurais, logo, 
+é esperado que os dois apresentem a mesma taxa de crescimento, seja ele positivo ou negativo.
+
+
+Da mesma forma, na figura 3 pode ser visto que o crescimento populacional brasileiro segue a 
+mesma taxa de crescimento desde 1960, o que é suportado por cada vez mais pessoas viverem 
+em centros urbanos, tendo mais acesso a condições melhores de vida, à saúde, saneamento básico 
+e infraestrutura. Esse suporte social garante que a população continue crescendo e que a 
+taxa de mortalidade infantil abaixe, o que explica essa taxa estar em constante crescimento. 
