--- a/artigo_series_temporais/article/series-temporais-references.bib
+++ b/artigo_series_temporais/article/series-temporais-references.bib
@@ -1,26 +1,59 @@
-@Book{knuth:84,
-  author = 	 {Donald E. Knuth},
-  title = 	 {The {\TeX} Book},
-  publisher = 	 {Addison-Wesley},
-  year = 	 {1984},
-  edition = 	 {15th}
+@Book{BOX:1,
+  author = {George BOX and Gwilym JENKINS and Gregory REINSEL and Greta LJUNG},
+  title = {Time Series Analysis: Forecasting and Control},
+  publisher = {John Wiley and Sons Inc.},
+  year = 	 {2015},
+  edition = {5th}
 }
 
-@InCollection{boulic:91,
-  author = 	 {R. Boulic and O. Renault},
-  title = 	 {3D Hierarchies for Animation},
-  booktitle = 	 {New Trends in Animation and Visualization},
-  publisher =    {John Wiley {\&} Sons ltd.},
-  year = 	 {1991},
-  editor = 	 {Nadia Magnenat-Thalmann and Daniel Thalmann}
+@Book{WEIGEND:2,
+  author = {WEIGEND A. S. and GERSHENFELD, N. A},
+  title = {Time Series Prediction: Forecasting the Future and Understanding the Past},
+  publisher = {Taylor \& Francis Inc},
+  year = 	 {1994},
+  edition = {1st}
 }
 
-@InCollection{smith:99,
-  author = 	 {A. Smith and B. Jones},
-  title = 	 {On the Complexity of Computing},
-  booktitle = 	 {Advances in Computer Science},
-  pages = 	 {555--566},
-  publisher =    {Publishing Press},
-  year = 	 {1999},
-  editor = 	 {A. B. Smith-Jones}
+@techreport{Ban:3,
+  author      = {Ban, Y. and Zhang and P. and Nascetti A},
+  institution = {Sci Rep 10, 1322, https://doi.org/10.1038/s41598-019-56967-x},
+  title       = {Near Real-Time Wildfire Progression Monitoring with Sentinel-1 SAR Time Series and Deep Learning.},
+  year        = {2020}
+}
+
+@Book{Benjamin:4,
+  author = {Benjamin Lindemann and Timo Müller and Hannes Vietz and Nasser Jazdi and Michael Weyrich},
+  title = {A survey on long short-term memory networks for time series prediction},
+  publisher = {Procedia CIRP},
+  year = 	 {2021},
+  edition = {Volume 99, Pages 650-655, ISSN 2212-8271}
+}
+
+@book{Alan:5,
+  author         = {Alan G. Green and Gordon R. Sparks},
+  publisher      = {Economic History Working Papers 22414, London School of Economics and Political Science, Department of Economic History},
+  title          = {Population growth and the dynamics of Canadian development: a multivariate time series approach},
+  year           = {1999}
+}
+
+// Adicionar o dataset aqui
+@book{Dataset:6,
+  author         = {World Bank Group},
+  publisher      = {HealthStats},
+  title          = {Health Nutrition and Population Statistics},
+  year           = {2022}
+}
+
+@book{Peter:7,
+  author         = {Peter R. WINTERS},
+  publisher      = {INFORMS},
+  title          = {Forecasting Sales by Exponentially Weighted Moving Averages},
+  year           = {1960}
+}
+
+@book{WIENER:8,
+  author         = {N. WIENER},
+  publisher      = {MIT Press},
+  title          = {Extrapolation, Interpolation, and Smoothing of Stationary Time Series},
+  year           = {1949}
 }
