--- a/artigo_series_temporais/article/sections/abstract.tex
+++ b/artigo_series_temporais/article/sections/abstract.tex
@@ -1,41 +1,12 @@
 \begin{abstract}
-    O acelerado crescimento populacional e econômico experienciado por inúmeros
-    países no século XX demandou uma expansão da capacidade de processamento e 
-    interpretação de informações em diferentes setores da sociedade, com uma das 
-    técnicas mais relevantes sendo a análise de séries temporais devido à sua 
-    ampla aplicação em diferentes setores da sociedade. Séries temporais são 
-    definidas como uma coleção de observações expandidas ao longo de um 
-    determinado período de tempo, e sua representação consiste em uma série 
-    de pontos indexados e ordenados ao longo de um intervalo constante de tempo\cite{knuth:84}. 
-    Tendo isso em vista, diferentes conjuntos de dados podem ser entendidos e 
-    representados como séries temporais: a quantidade de objetos produzidos 
-    por uma fábrica, uma representação numérica do número semanal de acidentes 
-    em uma estrada, precipitação ao longo de um ano, observações de hora em 
-    hora acerca de um processo químico, e diversos outros. Exemplos de usos 
-    de séries temporais também podem ser encontrados em setores como finanças, 
-    geografia, engenharia, ciências naturais e ciências sociais \[2\].
-
-    Tendo isto em vista, é natural que séries temporais se tornem cada vez mais 
-    presentes no contexto de análise de dados a fim de diversificar o número de 
-    técnicas utilizadas e prover alternativas mais adequadas a cada cenário. 
-    O presente trabalho visa auxiliar esse processo ao expor cenários onde séries 
-    temporais podem representar fenômenos e formas de interpretação de dados. 
-    Para este fim, foram implementados diferentes datasets sintéticos com o 
-    intuito de demonstrar as aplicações de séries temporais e em quais cenários 
-    determinados tipos de séries temporais são mais adequados para a representação dos dados.
-
-    A análise de séries temporais é uma categoria de técnicas capazes de produzir 
-    um modelo que leva em consideração dados passados da série para fazer uma 
-    predição do valor de um dado desconhecido. Estas técnicas são úteis à medida 
-    que estimar valores relevantes em determinados contextos pode se provar 
-    imperativo para tomadas de decisões bem-sucedidas, com essas previsões 
-    podendo ser aplicadas nos mais diferentes contextos e cenários, como 
-    explicitado anteriormente. Adicionalmente, como os modelos prevêem novos 
-    valores utilizando como base valores passados, é importante que haja coerência 
-    na ordem de observação a fim de possibilitar que o modelo note a presença de 
-    características e padrões na série. Esta característica pode ser aproveitada 
-    para mapear e mensurar diferentes métricas que estão ordenadas ao longo de um 
-    período de tempo. Com isto em mente, o presente artigo tem como objetivo 
-    utilizar a análise de séries temporais para avaliar a evolução de diferentes 
-    medidores de desenvolvimento socioeconômicos brasileiros de 1960 a 2014.
+    Every year, the population of Brazil grows by a given factor, increasing demand 
+    for a higher operating budget in cities, states and the country. The factor 
+    that denotes said growth is given by a combination of different variables 
+    such as access to sanitation, universal healthcare and better infrastructure, 
+    which are the foundation for supporting a bigger population. Discovering this 
+    growth factor can help a number of government institutions, planning departments 
+    and cities in taking into account projected growth when reporting future operating 
+    budgets to the federal government of Brazil. This study aims to develop a 
+    machine learning model that is able to easily and reliably project said population 
+    growth, especially in small towns that don’t have enough data to train a multivariable model. 
 \end{abstract}
