--- a/artigo_series_temporais/article/sections/experimentos.tex
+++ b/artigo_series_temporais/article/sections/experimentos.tex
@@ -1,23 +1,24 @@
 \section{Experimentos}
 
-Ao final da etapa de previsões foi gerada uma imagem para 
-cada indicador contendo os valores previstos para o período 
-de teste, bem como os valores reais referentes aos períodos de 
-treinamento, validação e teste, vide as figuras 1, 2 e 3.  
-Como extensão dessa etapa, o modelo também foi avaliado de acordo 
-com as métricas de avaliação descritas pela metodologia do estudo, 
-vide as tabelas 3, 4, 5.
+Ao final da etapa de previsões foi gerada uma imagem para cada indicador contendo os 
+valores previstos para o período de teste, bem como os valores reais referentes aos 
+períodos de treinamento, validação e teste, vide as figuras 1, 2 e 3.  Como extensão 
+dessa etapa, o modelo também foi avaliado de acordo com as métricas de avaliação 
+definidas pela metodologia do estudo, vide as tabelas 3, 4, 5.
 
-\begin{figure}[h]
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.35]{images/Figure_1}
     \caption{Modelagem da previsão para o indicador “SP.POP.TOTL”}
 \end{figure}
 
-Na figura 1 é apresentada a modelagem da previsão para o indicador “SP.POP.TOTL”, 
-que apresenta a população brasileira ao longo dos anos, em milhões de pessoas. 
-A tabela 3 apresenta os valores obtidos para as métricas de avaliação do modelo. 
-A partir do exposto, é possível ver como
+Na figura 3 é apresentada a modelagem da previsão para o indicador “SP.POP.TOTL”, que apresenta a população 
+brasileira ao longo dos anos, em milhões de pessoas. A tabela 3 apresenta os valores 
+obtidos para as métricas de avaliação do modelo. A partir do exposto, é possível ver como a 
+modelagem performou dentro do objetivo estabelecido nas duas métricas, e apresentou um desvio negligenciável.
 
-\begin{table}[h]
+
+\begin{table}[h!]
     \centering
     \begin{tabular}{|c|c|}
         \hline
@@ -31,17 +32,17 @@ A partir do exposto, é possível ver como
     \caption{Avaliação da performance do modelo no conjunto de teste com as métricas \emph{MAE} e \emph{R2}}
 \end{table}
 
-\begin{figure}[h]
-    \caption{Modelagem da previsão para o indicador “SP.RUR.TOTL.ZS”}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.35]{images/Figure_2}
+    \caption{Modelagem da previsão para o indicador ``SP.RUR.TOTL.ZS''}
 \end{figure}
 
-Na figura 2 é vista a modelagem da previsão para o indicador “SP.DYN.LE00.IN”, 
-que apresenta a porcentagem da população brasileira que vive em centros urbanos 
-ao longo dos anos. A tabela 4 apresenta os valores obtidos para as métricas de 
-avaliação do modelo em relação a esse indicador. Na tabela 5 são apresentadas 
-as métricas de avaliação para esse indicador no conjunto de testes.
+Na figura 4 é vista a modelagem da previsão para o indicador ``SP.RUR.TOTL.ZS'', 
+que apresenta a porcentagem da população brasileira que vive em áreas rurais ao longo dos anos. 
+A tabela 4 apresenta os valores obtidos para as métricas de avaliação do modelo em relação a esse indicador.
 
-\begin{table}[h]
+\begin{table}[h!]
     \centering
     \begin{tabular}{|c|c|}
         \hline
@@ -55,13 +56,15 @@ as métricas de avaliação para esse indicador no conjunto de testes.
     \caption{Avaliação da performance do modelo no conjunto de teste com as métricas \emph{MAE} e \emph{R2}}
 \end{table}
 
-\begin{figure}[h]
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.35]{images/Figure_3}
     \caption{Modelagem da previsão para o indicador “SP.URB.TOTL.IN.ZS”}
 \end{figure}
 
-Na figura 3 é vista a modelagem da previsão para o indicador “SP.URB.TOTL.IN.ZS”, que apresenta a porcentagem da 
-população brasileira que vive em centros urbanos ao longo dos anos. A tabela 5 apresenta os valores obtidos 
-para as métricas de avaliação do modelo em relação a esse indicador.
+Na figura 5 é vista a modelagem da previsão para o indicador ``SP.URB.TOTL.IN.ZS'', que apresenta a porcentagem 
+da população brasileira que vive em centros urbanos ao longo dos anos. A tabela 5 apresenta os valores 
+obtidos para as métricas de avaliação do modelo em relação a esse indicador. 
 
 \begin{table}[h!]
     \centering
