--- a/artigo_series_temporais/article/sections/experimentos.tex
+++ b/artigo_series_temporais/article/sections/experimentos.tex
@@ -6,7 +6,7 @@ períodos de treinamento, validação e teste, vide as figuras 1, 2 e 3.  Como e
 dessa etapa, o modelo também foi avaliado de acordo com as métricas de avaliação 
 definidas pela metodologia do estudo, vide as tabelas 3, 4, 5.
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[scale=0.35]{images/Figure_1}
     \caption{Modelagem da previsão para o indicador “SP.POP.TOTL”}
@@ -18,7 +18,7 @@ obtidos para as métricas de avaliação do modelo. A partir do exposto, é poss
 modelagem performou dentro do objetivo estabelecido nas duas métricas, e apresentou um desvio negligenciável.
 
 
-\begin{table}[h!]
+\begin{table}[H]
     \centering
     \begin{tabular}{|c|c|}
         \hline
@@ -32,7 +32,7 @@ modelagem performou dentro do objetivo estabelecido nas duas métricas, e aprese
     \caption{Avaliação da performance do modelo no conjunto de teste com as métricas \emph{MAE} e \emph{R2}}
 \end{table}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[scale=0.35]{images/Figure_2}
     \caption{Modelagem da previsão para o indicador ``SP.RUR.TOTL.ZS''}
@@ -42,7 +42,7 @@ Na figura 4 é vista a modelagem da previsão para o indicador ``SP.RUR.TOTL.ZS'
 que apresenta a porcentagem da população brasileira que vive em áreas rurais ao longo dos anos. 
 A tabela 4 apresenta os valores obtidos para as métricas de avaliação do modelo em relação a esse indicador.
 
-\begin{table}[h!]
+\begin{table}[H]
     \centering
     \begin{tabular}{|c|c|}
         \hline
@@ -56,7 +56,7 @@ A tabela 4 apresenta os valores obtidos para as métricas de avaliação do mode
     \caption{Avaliação da performance do modelo no conjunto de teste com as métricas \emph{MAE} e \emph{R2}}
 \end{table}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[scale=0.35]{images/Figure_3}
     \caption{Modelagem da previsão para o indicador “SP.URB.TOTL.IN.ZS”}
@@ -66,7 +66,7 @@ Na figura 5 é vista a modelagem da previsão para o indicador ``SP.URB.TOTL.IN.
 da população brasileira que vive em centros urbanos ao longo dos anos. A tabela 5 apresenta os valores 
 obtidos para as métricas de avaliação do modelo em relação a esse indicador. 
 
-\begin{table}[h!]
+\begin{table}[H]
     \centering
     \begin{tabular}{|c|c|}
         \hline
