--- a/artigo_series_temporais/article/sections/metodologia.tex
+++ b/artigo_series_temporais/article/sections/metodologia.tex
@@ -91,7 +91,7 @@ que é expressada por:
     \caption{Equação de nível da série}
 \end{figure}
 
-Na equação 2, é escolhido um valor para alpha $(\alpha)$, o que afeta a representatividade dos 
+Na figura 2, é escolhido um valor para alpha $(\alpha)$, o que afeta a representatividade dos 
 valores de níveis-base passados. Valores próximos a um reduzem o peso de valores muito antigos, 
 e valores próximos a zero dão o mesmo peso para todos os valores presentes na série. 
 Dessa forma, o modelo aprende qual será o nível referente a um novo ano que foi inserido 
